# tailwind-email

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/tailwind_email/: __init__.py  converter.py  fallbacks.py  parser.py  transformer.py  utils.py
src/tailwind_email/mappings/: __init__.py  borders.py  colors.py  effects.py  sizing.py  spacing.py  typography.py
tests/: __init__.py  test_advanced_features.py  test_converter.py  test_edge_cases.py  test_fixtures.py  test_large_templates.py  test_parser.py  test_stress.py  test_transformer.py
