[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailwind-email"
version = "0.1.0"
description = "Transform HTML with Tailwind CSS classes into email-client-compatible HTML with inline styles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tailwind Email Contributors" }
]
keywords = [
    "tailwind",
    "css",
    "email",
    "html",
    "inline-styles",
    "email-templates",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/tailwind-email/tailwind-email"
Documentation = "https://github.com/tailwind-email/tailwind-email#readme"
Repository = "https://github.com/tailwind-email/tailwind-email"
Issues = "https://github.com/tailwind-email/tailwind-email/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tailwind_email"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line length - too many HTML strings in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
